--- a/index.html
+++ b/index.html
@@ -451,108 +451,7 @@
 		},
         "jump_3",
         "jump_2",
-        "jump_1",
-        "start",
-		{
-			repeat: textTime,
-			picture: [
-				"         000         ",
-				"        0   0      I'm  ",
-				"        0___0        ",
-				"     00000000000     ",
-				"    00 0000000 00    ",
-				"    00 0000000 00    ",
-				"    00 0000000 00    ",
-				"     00-------00     ",
-				"      WW00000WW      ",
-				"       00   00       ",
-				"       00   00       ",
-				"       00   00       ",
-				"       00   00       ",
-				"       XX   XX       ",
-				"       XX   XX       ",
-			],
-		},
-		{
-			repeat: textTime,
-			picture: [
-				"         000         ",
-				"        0   0      I'm bad ",
-				"        0___0        ",
-				"     00000000000     ",
-				"    00 0000000 00    ",
-				"    00 0000000 00    ",
-				"    00 0000000 00    ",
-				"     00-------00     ",
-				"      WW00000WW      ",
-				"       00   00       ",
-				"       00   00       ",
-				"       00   00       ",
-				"       00   00       ",
-				"       XX   XX       ",
-				"       XX   XX       ",
-			],
-		},
-		{
-			repeat: textTime,
-			picture: [
-				"         000         ",
-				"        0   0      I'm bad at ",
-				"        0___0        ",
-				"     00000000000     ",
-				"    00 0000000 00    ",
-				"    00 0000000 00    ",
-				"    00 0000000 00    ",
-				"     00-------00     ",
-				"      WW00000WW      ",
-				"       00   00       ",
-				"       00   00       ",
-				"       00   00       ",
-				"       00   00       ",
-				"       XX   XX       ",
-				"       XX   XX       ",
-			],
-		},
-		{
-			repeat: textTime,
-			picture: [
-				"         000         ",
-				"        0   0      I'm bad at ",
-				"        0___0      ASCII  ",
-				"     00000000000     ",
-				"    00 0000000 00    ",
-				"    00 0000000 00    ",
-				"    00 0000000 00    ",
-				"     00-------00     ",
-				"      WW00000WW      ",
-				"       00   00       ",
-				"       00   00       ",
-				"       00   00       ",
-				"       00   00       ",
-				"       XX   XX       ",
-				"       XX   XX       ",
-			],
-		},
-		{
-			repeat: fps * 3,
-			picture: [
-				"         000         ",
-				"        0   0      I'm bad at ",
-				"        0___0      ASCII art. ",
-				"     00000000000     ",
-				"    00 0000000 00    ",
-				"    00 0000000 00    ",
-				"    00 0000000 00    ",
-				"     00-------00     ",
-				"      WW00000WW      ",
-				"       00   00       ",
-				"       00   00       ",
-				"       00   00       ",
-				"       00   00       ",
-				"       XX   XX       ",
-				"       XX   XX       ",
-			],
-		}
+        "jump_1"        
     ];
 	const end = frames.length - 1;
 
